--- a/public/css/style.css
+++ b/public/css/style.css
@@ -318,8 +318,8 @@ body {
   .header {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
-    -ms-flex-direction: column;
-    flex-direction: column;
+    /* -ms-flex-direction: column; */
+    /* flex-direction: column; */
   }
 }
 .header__logo img {
@@ -1077,16 +1077,17 @@ body {
 }
 
 .card-container {
-  max-width: 120rem;
-  min-width: 115rem;
   margin: 0 auto;
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
   grid-template-columns: repeat(3, 1fr);
   gap: 7rem;
 }
 
 .card {
+  max-width: 36rem;
+  min-width: 32rem;
   border-radius: 3px;
   overflow: hidden;
   -webkit-box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.1);
