--- a/public/css/style.css
+++ b/public/css/style.css
@@ -186,9 +186,10 @@ body {
 .btn,
 .btn:link,
 .btn:visited {
+  width: 100%;
   font-size: 1.6rem;
   padding: 1.4rem 3rem;
-  border-radius: 10rem;
+  border-radius: 0.5rem;
   text-transform: uppercase;
   display: inline-block;
   text-decoration: none;
@@ -318,6 +319,7 @@ body {
   .header {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
+    padding: 0 2%;
     /* -ms-flex-direction: column; */
     /* flex-direction: column; */
   }
@@ -836,7 +838,8 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  justify-content: flex-end;
+  justify-content: center;
+  flex-wrap: wrap;
 }
 .footer__nav li {
   margin-left: 1.5rem;
@@ -870,11 +873,19 @@ body {
   align-items: center;
 }
 @media only screen and (max-width: 37.5em) {
+  .header {
+    gap: 0.3rem;
+  }
   .nav {
+    gap: 1rem;
+    -ms-flex: auto;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
-    -ms-flex-direction: column;
-    flex-direction: column;
+    /* -ms-flex-direction: column;
+    flex-direction: column; */
+  }
+  .nav .nav__el {
+    margin: 0;
   }
 }
 .nav--tours {
@@ -933,7 +944,7 @@ body {
 @media only screen and (max-width: 37.5em) {
   .nav__el:not(:last-child) {
     margin-right: 0;
-    margin-bottom: 1.2rem;
+    /* margin-bottom: 1.2rem; */
   }
 }
 .nav__el:focus {
@@ -941,7 +952,7 @@ body {
 }
 .nav__el--cta {
   padding: 1rem 3rem;
-  border-radius: 10rem;
+  border-radius: 0.3rem;
   border: 1px solid currentColor !important;
   -webkit-transition: all 0.3s;
   transition: all 0.3s;
@@ -1087,7 +1098,7 @@ body {
 
 .card {
   max-width: 36rem;
-  min-width: 32rem;
+  min-width: 26rem;
   border-radius: 3px;
   overflow: hidden;
   -webkit-box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.1);
@@ -1332,4 +1343,88 @@ body {
   box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.15);
   -webkit-transform: translateY(-2px);
   transform: translateY(-2px);
+}
+
+.account {
+  display: flex;
+  padding: 1rem;
+  position: relative;
+  flex-shrink: 0;
+  font-size: 1.8rem;
+  color: #252525;
+  background-color: #f7f7f7;
+}
+.account__el--page > a {
+  font-size: 80% !important;
+}
+.account__el {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+}
+@media (max-width: 30rem) {
+  .btn {
+    font-size: 1rem;
+    width: 100%;
+  }
+  .form__group:not(:last-child) {
+    margin-bottom: 1.5rem;
+  }
+  .heading-secondary {
+    font-size: 1.5rem;
+    text-align: center;
+    width: 100%;
+  }
+
+  .form__label {
+    font-size: 1.3rem;
+  }
+
+  .login-form,
+  .signup-form {
+    font-size: 1rem;
+    padding: 1rem 2rem;
+  }
+
+  .account__el--page {
+    display: flex;
+    gap: 2rem;
+    margin-left: 3rem;
+  }
+  .account.hidden {
+    display: flex;
+  }
+  .account__el--page a {
+    color: #252525 !important;
+    border: none !important;
+    padding: 0;
+  }
+  .header__logo {
+    margin: 0;
+  }
+  .header {
+    padding: 0 2rem;
+    justify-content: space-between;
+  }
+  .nav--user {
+    display: none !important;
+  }
+  .nav--tours,
+  .nav--tours > * {
+    flex: 0 1 auto;
+    display: block;
+  }
+  .main {
+    padding: 4rem 1rem;
+  }
+  .footer {
+    padding: 4rem 1rem 0 1rem;
+  }
+  .footer__copyright {
+    justify-self: end;
+  }
+}
+
+.hidden {
+  display: none;
 }
