--- a/views/base.pug
+++ b/views/base.pug
@@ -8,6 +8,8 @@ html
       meta(name='viewport' content='width=device-width, initial-scale=1.0')
       link(rel='stylesheet' href='/css/style.css')
       link(rel='shortcut icon' type='image/png' href='/img/favicon.png')
+      script(type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js")
+      script(nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js")
       link(rel='stylesheet' href='https://fonts.googleapis.com/css?family=Lato:300,300i,700')
       title Natours | #{title}
 
