--- a/views/signup.pug
+++ b/views/signup.pug
@@ -18,4 +18,4 @@ block content
           label.form__label(for='password-confirm') Confirm Password
           input#password-confirm.form__input(type='password', placeholder='••••••••', required, minlength='8')
         .form__group
-          button.btn.btn--green Sign up
+          button.btn.btn--green.btn--account Sign up
