--- a/views/account.pug
+++ b/views/account.pug
@@ -13,7 +13,7 @@ block content
     .user-view
       nav.user-view__menu
         ul.side-nav
-          +navItem('#', 'Settings', 'settings', true)
+          +navItem('/me', 'Settings', 'settings', true)
           +navItem('/my-tours', 'My Bookings', 'briefcase')
           +navItem('#', 'My Reviews', 'star')
           +navItem('#', 'Billing', 'credit-card')
