--- a/public/css/style.css
+++ b/public/css/style.css
@@ -100,7 +100,7 @@ body {
   border-bottom-left-radius: 5px;
   border-bottom-right-radius: 5px;
   padding: 1.6rem 15rem;
-  -webkit-box-shadow: 0 2rem 4rem rgba(0, 0, 0, 0.25);
+  -webkit-box-shadow: 0 2rem 4rem rgba(5, 5, 5, 0.25);
   box-shadow: 0 2rem 4rem rgba(0, 0, 0, 0.25);
 }
 .alert--success {
@@ -1365,7 +1365,7 @@ body {
   gap: 0.5rem;
 }
 
-.profile-menu {
+.menu {
   width: 4rem;
   padding: 0.5rem;
   border-radius: 0.2rem;
@@ -1382,6 +1382,15 @@ body {
   left: 0 !important;
 }
 
+.close {
+  height: 3rem;
+  width: 3rem;
+  color: #fff;
+}
+
+.close-menu {
+  background-color: #252525;
+}
 @media (max-width: 73.75em) {
   .section-header {
     height: 55rem;
@@ -1397,6 +1406,10 @@ body {
   }
   .user-view__menu {
     flex: 25rem 0 0 !important;
+  }
+  .alert {
+    width: 80%;
+    padding: 1.6rem 2rem;
   }
 }
 
@@ -1430,7 +1443,7 @@ body {
     width: 100%;
   }
   .cta {
-    padding: 4rem 4rem 4rem 8rem;
+    padding: 2rem 4rem 2rem 8rem;
   }
   .cta__content {
     display: flex;
@@ -1448,15 +1461,20 @@ body {
   }
 
   .user-view__menu {
+    position: absolute;
     top: 0;
-    left: -100rem;
-    z-index: 1000;
+    left: -100%;
     height: 100%;
     width: 100%;
-    position: absolute;
-    transition: all 1s ease-out;
+    padding: 1rem 0;
+    transition: all 0.5s ease-out;
+    z-index: 1000;
+    /* opacity: 0; */
   }
 
+  .close-menu.hidden {
+    display: grid;
+  }
   .side-nav *  a {
     justify-content: center;
   }
@@ -1465,7 +1483,7 @@ body {
     padding: 0 1rem;
   }
   .user-view__content {
-    padding: 7rem 2rem;
+    padding: 4rem 2rem;
   }
   .line {
     margin: 4rem 0;
@@ -1475,10 +1493,6 @@ body {
     display: block !important;
   }
 
-}
-
-.hidden {
-  display: none;
 }
 
 @media (max-width: 31.3em) {
@@ -1583,13 +1597,17 @@ body {
   .heading-box__text {
     width: 100%;
   }
-  .cta {
+  /* .cta {
     padding: 6rem 4rem;
-  }
+  } */
   .user-view__content {
     padding: 2rem 0.5rem;
   } 
   .user-view__form-content {
     padding:0 1rem;
   } 
+}
+
+.hidden {
+  display: none;
 }
